[package]
name = "precision"
version = "0.1.9"
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["development-tools","development-tools::profiling"]
license = "ISC"
homepage = "https://github.com/jedisct1/rust-precision"
repository = "https://github.com/jedisct1/rust-precision"
description = "Low overhead, high precision measurement crate"
edition = "2018"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
rustc_version = "0.2"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
