[package]
name = "precision"
version = "0.1.16"
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["development-tools", "development-tools::profiling"]
license = "ISC"
homepage = "https://github.com/jedisct1/rust-precision"
repository = "https://github.com/jedisct1/rust-precision"
description = "Low overhead, high precision measurement crate"
edition = "2018"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.12.0"

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.build-dependencies]
cc = "1"
rustc_version = "0.4"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
